--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -1,12 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    kubernetes.azure.com/ingress-host: myapp.kubebox.in
+    kubernetes.azure.com/tls-cert-keyvault-uri: myapp
+  creationTimestamp: null
   name: myapp
 spec:
-  type: LoadBalancer
+  ports:
+  - port: 80
+    protocol: TCP
+    targetPort: 80
   selector:
     app: myapp
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
+  type: ClusterIP
+status:
+  loadBalancer: {}
